Mon Aug 27 16:38:43 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc (parse): Fixed delete [] text (was missing []), added
	simple optimizations for comment & noindex_start skipping, handle
	decoded &lt; entity correctly.

Mon Aug 27 15:31:01 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	[ Backport 3.2.0b4 config files. ]
	* installdir/htdig.conf: Added .css to bad_extensions default,
	added missing closing ">", added mentions of accents & substring,
	fixed a couple typos in comments.
	* installdir/search.html: Add DTD tag for HTML 4 compliance.
	* installdir/{long, syntax, header, footer, wrapper, nomatch}.html: 
	Add DTD tags, ALT attributes and remove bogus </select> tags to
	fix invalid HTML pointed out in PR#901.  Change all <b> and <i> tags
	to the HTML-4.0 compliant <strong> and <em> tags.
	* htdoc/config.html: Updated with sample of latest htdig.conf and
	installdir/*.html, added blurb on wrapper.html.

Thu Jul 26 15:05:29 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc, htsearch/parser.cc (perform_or),
	htdoc/attrs.html, htdoc/cf_by{name,prog}.html: Added new attribute
	multimatch_method and used it to boost score on 'or' method with
	multiple matches.

Thu Jul 26 14:25:01 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc, htsearch/parser.cc, htdoc/attrs.html,
	htdoc/cf_by{name,prog}.html: Added new attribute boolean_syntax_errors
	and used it to generate syntax error messages for boolean method.

Wed Jul 25 23:39:00 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htnotify/htnotify.cc: Changed calls to EmailNotification class
	to avoid compiler warnings.

Wed Jul 25 23:15:24 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc, htsearch/htsearch.cc, htdoc/attrs.html,
	htdoc/cf_by{name,prog}.html: Added new attribute boolean_keywords
	and used it to make LOGICAL_WORDS and parse "words" using boolean
	method.
